Fix: detail likes gap of divs

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -71,6 +71,7 @@ a {
     opacity: 0.85;
     filter: brightness(35%);
     position: relative;
+    margin-bottom: 50px;
 }
 .contact-text{
     position: absolute;
@@ -91,16 +92,26 @@ a {
     color: whitesmoke;
 }
 
-
-/* #division-explaination p :not(body div){
-    size: 1.2em;
-} */
+#division-explaination{
+    width: 100%;
+    height: 50px;
+    position: relative;
+    background-color: #f0f4f5;
+}
+#division-explaination span{
+    size: 2em;
+    font-weight: lighter;
+    position: relative;
+    top:11px;
+    right: 38%;
+    padding-bottom:5px;
+    border-bottom: #8d8c8c solid 3px;
+}
 
 /*contect 내용*/
 #contact_contents{
     position: relative;
     width: 100%;
-    height: 500px;
 }
 
 
@@ -109,21 +120,24 @@ a {
     width: 50%;
     margin: 0;
     float: left;
+    position: relative;
 }
 
 .map #daumRoughmapContainer1675871615256{
     position: relative;
-    top:16px;
     margin: 0;
     width: 50%;
     float: left;
 }
-
+.contact_info ul{
+    margin: 0px;
+}
 .contact_info ul div{
     width: 100%;
     height: 250px;
     float:inline-start;
     margin:0px;
+    position: relative;
 }
 .contact_info ul{
     padding: 0;
